Fix textarea not being able to stretch

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,5 @@
 .info-box {
-  height: 150px !important;
+  min-height: 150px !important;
 }
 
 .file-box {
